# BitQuant

./: Dockerfile  Makefile  pyproject.toml  requirements.txt  sample-payload.json
.github/workflows/: deploy.yml
agent/: agent_executors.py  tools.py
api/: api_types.py
onchain/portfolio/: solana_portfolio.py
onchain/tokens/: trending.py
server/: activity_tracker.py  config.py  fastapi_server.py  opg_token_gate.py  service.py  utils.py
templates/: analytics_agent.jinja2
